fixed spacing in nested comments

--- a/src/modules/HomeModule/components/HomePageComponents/Comments/Comment/Comment.scss
+++ b/src/modules/HomeModule/components/HomePageComponents/Comments/Comment/Comment.scss
@@ -16,6 +16,8 @@
         margin-left: auto;
         margin-top: 16px;
         position: relative;
+        display: grid;
+        gap: 16px;
         
         &:before {
             content: '';
